# taipy_success

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  config.toml  export-docker.py  freezer.py  issues.md  job-config.toml  nginx.conf  pyproject.toml  tables_great.py
KnowledgeBase/: main_1p.py  main_2p.py  main_navbar.py  partial.py  popup.py  receiver.py  sender.py
KnowledgeBase/demo-chatbot/: README.md  main.py
KnowledgeBase/pages/: home.py  table_sp500.py  table_yfin.py  temperature.py
app/: gui.py  main.py  models.py  turing.py
app/models/: __init__.py  calculator.py  yfin.py
app/pages/: calculator.py  chatbot.py
app/scenarios/: yfin.py  yfin_spx.py
app/tools/: __init__.py  db_manager.py  db_sqlite.py  db_test.py  yfin.py
apps/: nav.py
apps/enterpriser/: ice_breaker.py  main.py  output_parsers.py
apps/enterpriser/third_parties/: tyc.py
apps/yfin/: README.md  hello.py  main.css  main.py  pyproject.toml  pyta.py
apps/yfin/databases/: yfin.db
apps/yfin/models/: calculator.py
apps/yfin/pages/: __init__.py  calculator.py  candle.py  chatbot.py  home.py  yfin.py  yfinfile.py
apps/yfin/scenarios/: yfin_spx.py
apps/yfin/tools/: yfin.py
auths/: hello.py  practice.py  practice_authenticator.py  practice_dialog.py  practice_django.py  pyproject.toml  sample.py  tools.py
callbacks/: on_change.py
chatbot/: README.md  chat_calculator.py  chat_llm.py  chat_openai.py  hello.py  main.css  main.py  main_auth.py  main_gu.py  main_guest.py  main_sess.py  main_session.py  main_user.py  navpar.py  pyproject.toml  requirements.txt  selecteur.py
chatbot/faiss_suaee/: index.faiss  index.pkl
chatbot/models/: chat.py  stateclass.py
chatbot/pages/: __init__.py  chat.py  home.py  page.py  sidebar.py
chatbot/tools/: chat.py  chatapi.py  chatcompletion.py  chatcpl.py  chatrag.py  embedder.py  llmbuilder.py
chatbot/utils/: __init__.py  embedder.py  llmbuilder.py
chatsql/pages/: home.py
datauv.asia/: .dockerignore  Dockerfile  README.md  app.py  export-docker.py  hello.py  pyproject.toml  requirements.txt  turing.py  versions.md
datauv.asia/pages/: __init__.py  about.py  math.py  policies.py  pricing.py  service.py  sidebar.py
datauv.asia/static/css/: main.css
demo-chatbot-v4.0/: README.md  pyproject.toml
demo-chatbot-v4.0/src_md/: pyproject.toml  requirements.txt
demo-chatbot-v4.0/src_tgb/: main_tgb.css  main_tgb.py  openai_utils.py  pyproject.toml  stateclass.py
littlegiant/: README.md  page_table.py  popup_table01.py  popup_table02.py  popup_text.py  pyproject.toml
littlegiant/dialogs/: dialog.css  dialog_table.py  dialog_table_import.py  dialog_text.py
littlegiant/questionnaire/: app.py  db.sqlite3  manage.py  qa.py
littlegiant/questionnaire/dokuments/: apps.py  models.py
littlegiant/questionnaire/questionnaire/: asgi.py  settings.py  urls.py  wsgi.py
littlegiant/questionnaire/questions/: admin.py  app.py  models.py  tests.py  threads.py  views.py
littlegiant/questionnaire/questions/migrations/: 0001_initial.py  0002_question_category.py  0003_choice_symbol.py  0004_alter_choice_score_alter_choice_text.py  0005_choice_symbol_no.py  0006_question_identifier_alter_question_category.py  0007_alter_question_identifier.py  0008_remove_question_identifier.py  0009_question_identifier.py  0010_remove_choice_symbol_no_answer.py  0011_userprofile.py  0012_client.py  0013_answer_client.py  0014_question_display_order_alter_question_category_and_more.py  0015_alter_choice_unique_together.py
littlegiant/questionnaire/questions/templates/: home.html
littlegiant/taiflask/: app.py
littlegiant/taiflask/templates/: index.html
personwebsite/: app.py
personwebsite/pages/: __init__.py  about.py  sidebar.py
profiler/: app.py
scenarios/: beginner.py  job_execution.py  sp500.py  yfin.py
scheduler/: README.md  hello.py  hello_scheduler.py  helloworld.py  pyproject.toml  tp_scheduler.py
ssl_qcloud/: taipysuccess.asia.csr  taipysuccess.asia.key  taipysuccess.asia_bundle.pem
testuv/: hello.py  pyproject.toml  taipy_enterprise.py
utils/: llmbuilder.py
