[tool.poetry]
name = "taipy-success"
version = "0.1.0"
description = ""
authors = ["Youwei Zheng <figoyouwei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
great-tables = "^0.10.0"
yfinance = "^0.2.41"
polars = "^1.3.0"
selenium = "^4.23.1"
pydantic-sqlite = "^0.3.0"
langchain = "^0.2.14"
langchain-core = "^0.2.33"
langchain-openai = "^0.1.22"
taipy = "3.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
