[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Youwei Zheng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taipy = "4.0.0.dev2"
openai = "^1.43.0"
langchain-community = "^0.2.15"
dashscope = "^1.20.8"
faiss-cpu = "^1.8.0.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
