[tool.poetry]
name = "demo-chatbot-v4-0"
version = "0.1.0"
description = ""
authors = ["Youwei Zheng <figoyouwei@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_chatbot_v4"}]

[tool.poetry.dependencies]
python = "^3.11"
taipy = "4.0.0.dev1"
openai = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
