[tool.poetry]
name = "littlegiant"
version = "0.1.0"
description = ""
authors = ["Youwei Zheng <figoyouwei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taipy = "^3.1.1"
django = "^5.1.1"
flask = "3.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
