[tool.poetry]
name = "src_tgb"
version = "0.1.0"
description = ""
authors = ["FlorianJacta <98709993+FlorianJacta@users.noreply.github.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
taipy = "4.0.0.dev0"
openai = "1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
